--- a/.eslintrc
+++ b/.eslintrc
@@ -95,7 +95,10 @@
       }
     },
     {
-      "files": ["public/app/plugins/datasource/grafana-testdata-datasource/**/*.{ts,tsx}"],
+      "files": [
+        "public/app/plugins/datasource/grafana-testdata-datasource/*.{ts,tsx}",
+        "public/app/plugins/datasource/grafana-testdata-datasource/**/*.{ts,tsx}"
+      ],
       "settings": {
         "import/resolver": {
           "node": {
