Plugins: Add install token and stackId to config

--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -828,7 +828,7 @@ assume_role_enabled = true
 list_metrics_page_limit = 500
 
 # Experimental, for use in Grafana Cloud only. Please do not set.
-external_id = 
+external_id =
 
 #################################### Azure ###############################
 [azure]
@@ -1226,7 +1226,7 @@ url =
 
 # Tenant ID to use in requests to the Alertmanager.
 # It will also be used for the basic auth username.
-tenant = 
+tenant =
 
 # Optional password for basic authentication.
 # If not present, the tenant ID will be set in the X-Scope-OrgID header.
@@ -1498,6 +1498,8 @@ public_key_retrieval_disabled = false
 public_key_retrieval_on_startup = false
 # Enter a comma-separated list of plugin identifiers to avoid loading (including core plugins). These plugins will be hidden in the catalog.
 disable_plugins =
+# Auth token for plugin installations and removal in managed instances
+install_token =
 
 #################################### Grafana Live ##########################################
 [live]
