Adding .github/workflows/create-security-patch-from-security-mirror.yml (#75850)
* Adding .github/workflows/create-security-patch-from-security-mirror.yml

* Added .github/workflows/create-security-patch-from-security-mirror.yml to CODEOWNERS

(cherry picked from commit 6842cc63ec1cba911a0527036c1f30f8355aad83)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -34,6 +34,7 @@ go.sum @grafana/backend-platform
 /Makefile @grafana/grafana-delivery
 /scripts/build/ @grafana/grafana-delivery
 /scripts/list-release-artifacts.sh @grafana/grafana-delivery
+/.github/workflows/create-security-patch-from-security-mirror.yml @grafana/grafana-delivery
 
 # Cloud Datasources backend code
 /pkg/tsdb/cloudwatch @grafana/cloud-datasources
@@ -170,3 +171,4 @@ lerna.json @grafana/frontend-ops
 
 # Cloud middleware
 /grafana-mixin/ @grafana/hosted-grafana-team
+
